# employee_review

./: .gitignore  Makefile  README.md  docker-compose.yml  employees_data.json  pyproject.toml
ai_services/: __init__.py  client.py  llama_handler.py  test1.py  test2.py  test3.py
app/: __init__.py  main.py
app/adapters/repositories/: __init__.py  employee_repository.py
app/crud/: __init__.py  employee_role.py
app/domain/entities/: __init__.py  department.py  employee.py  review.py
app/domain/value_objects/: __init__.py  evaluation.py  generated_questions.py  llama_chat_response.py  llama_response.py  message.py  review.py
app/drivers/: database.py
app/drivers/llama/: __init__.py  llama_client.py  llama_config.py  llama_handler.py
app/models/: __init__.py  employee.py  evaluation.py  generated_questions.py
app/models/domain/: employee.py
app/ports/: employee_repository.py
app/routers/: __init__.py  questions.py  review.py  users.py
app/services/: __init__.py  question_service.py  review_service.py
app/services/llama_integration/: __init__.py  client.py  config.py  llama_client.py  llama_config.py  (+1 more)
app/use_cases/: __init__.py  change_review.py  generate_employee_questions.py  generate_review_from_evaluation.py  get_all_manager_employees.py  get_all_managers.py  get_all_users.py  get_employee_by_id.py  get_employee_role.py  save_employee_review.py
app/utils/: __init__.py  database.py  exception_handler.py
database/: Dockerfile  init_db.sql
employee_review/: __init__.py
fastapi/: Dockerfile
ollama/: Dockerfile  pull-llama3.sh
(+7 files in other folders)
