[tool.poetry]
name = "employee-review"
version = "0.1.0"
description = ""
authors = ["Michaela <miselka12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface = "^0.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
langchain-ollama = "^0.2.0"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
ctransformers = "^0.2.27"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
