[tool.poetry]
name = "employee-review"
version = "0.1.0"
description = ""
authors = ["Michaela <miselka12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
websockets = "^15.0.1"
ollama = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"